--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@azure/msal-browser": "^2.28.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.2.3",
     "@types/jest": "^27.0.0",
@@ -54,9 +55,9 @@
     "jest-environment-jsdom-fifteen": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rollup": "^2.77.0",
     "ts-jest": "^27.0.2",
     "tslib": "^2.3.1",
     "typescript": "^3.9.7"
-  },
-  "dependencies": {}
+  }
 }
